docs: describe the reactor instead of the single module
README, CLAUDE.md and AGENTS.md still described one module with a _shadejar
profile. They now carry a Module section with the three directories, their
artifactIds and what each contains, plus the three rules that are easy to get
wrong and expensive to debug:

- build-frontend belongs in core and nowhere else,
- static web resources live in core's META-INF/resources, not src/main/webapp,
- java -jar cannot work for the embedded module, so the manifest carries no
  Class-Path.

Build commands are per module now, the _shadejar entry explains why the profile
is gone rather than just dropping it, and the version table lists asm.version in
place of nano-vaadin-jetty.version. Also noted: pack the embedded form with
COPYFILE_DISABLE=1 on macOS, or AppleDouble companions end up in lib/ where
Java's wildcard picks them up as invalid archives.